====================
2018/2/14 - 2018/2/15
v 5-0.31

- Added ObjectList and fixed it.
- Fixed calls to _are_integer and _are_decimal in Engine::setupBuiltinFunctionExecution().
- Added FuncWrapper and void addForeignFuncInstance( Engine&, const String&, bool (*f)( FFIServices& ) )
- Changed VarAddress to be a singly-linked list.
- Changed VarAddress to be reference-counted and saved as pointers, requiring the Opcode usage to be non-const. Effected:
-- FuncFoundTask
-- OpcodeContainer::getOp
- Added Iter::peek to utility list.
- Minor optimizations to RefPtr.
- Re-added the callback system.
- ForeignFunc::isVariadic is not const.
- Added #define COPPER_DEBUG_STACK
- Added PrintScopeObjectNames for debugging the stack.
- Fixed bug in Stack that didn't decrement the size in clear().
- Added Stack::clearNonGlobal and changed Engine::clearStacks() to use it in place of Stack::clear().
- Added Engine::clearGlobals(), Stack::clearGlobal(), and StackFrame::replaceScope().
- Added helper class CallbackWrapper.
- Added helper class ForeignMethod.
- Added helper function void addForeignMethodInstance(Engine&, const String&, BaseClass*, bool (BaseClass::*pMethod)(FFIServices&)).
- Added helper function void addNewForeignFuncInstance( Engine&, const String&, ForeignFunc* ).
- New ObjectTypeIdentifier system tried and removed.
- Added "member_list" as a new built-in function for creating a list of members of a function.
- Added EngineMessage::DestroyedFuncAsMemberListArg and EngineMessage::NonFunctionAsMemberListArg.
- Changed ObjectList::prepend() to push_front() and added push_back(), changing append() to defer to calling it.
- Fixed bug in setupBuiltinFunctionExecution preventing system function calls.
- Implemented stack trace printing in Engine and Stack.
- Removed Logger::printFunctionError interface function.
- Added Logger::printTaskTrace() and Logger::printStackTrace().
- Changed TaskName to TaskType.